--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
-        <welcome-file>Product_Discount_Calculator.jsp</welcome-file>
+        <welcome-file>/Tuan_1/login.jsp</welcome-file>
+        <welcome-file>/Tuan_2/admin.jsp</welcome-file>
+        <welcome-file>/Tuan_1/Time.jsp</welcome-file>
+        <welcome-file>/Tuan_1/TimeServlet</welcome-file>
+
+
     </welcome-file-list>
 </web-app>
