--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <welcome-file-list>
         <welcome-file>/Tuan_1/login.jsp</welcome-file>
-        <welcome-file>/Tuan_2/admin.jsp</welcome-file>
+        <welcome-file>/Tuan_2/USD/USD_VND.jsp</welcome-file>
         <welcome-file>/Tuan_1/Time.jsp</welcome-file>
         <welcome-file>/Tuan_1/TimeServlet</welcome-file>
 
