--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
+<!--        <welcome-file>/Tuan_2/calculator/Calculator.jsp</welcome-file>-->
         <welcome-file>/Tuan_1/login.jsp</welcome-file>
-        <welcome-file>/Tuan_2/USD/USD_VND.jsp</welcome-file>
-        <welcome-file>/Tuan_1/Time.jsp</welcome-file>
-        <welcome-file>/Tuan_1/TimeServlet</welcome-file>
-
-
+<!--        <welcome-file>/Tuan_2/USD/USD_VND.jsp</welcome-file>-->
+<!--        <welcome-file>/Tuan_1/Time.jsp</welcome-file>-->
+<!--        <welcome-file>/Tuan_1/TimeServlet</welcome-file>-->
     </welcome-file-list>
 </web-app>
